[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yldpipeNG"
version = "0.1.0"
description = "rewrite of yldpipe, lean, for ypipe"
authors = [
    { name="flow", email="groovehunter@posteo.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
